--- a/styles.css
+++ b/styles.css
@@ -66,11 +66,6 @@ p{
     font-family: "Montserrat-Light";
 }
 
-/* Download Buttons */
-
-.download-button {
-    margin: 5% 3% 5% 0;
-}
 
 /* Servicios Section */
 
@@ -91,21 +86,29 @@ p{
     color: #ff4c68;
 }
 
-/* Testimonials Section */
+/* Instalaciones Section */
 
-#testimonials {  
-    background-color: #ff4c68;
-    color: #fff;
+.fotos-instalaciones {
+    margin: 3% 2%;
+    padding: 3% 2%;
+}
+
+.texto-instalaciones {
+    padding-top: 3%;
 }
 
 .testimonial-image {
-    width: 10%;
-    border-radius: 100%;
+    width: 50%;
+    border-radius: 2%;
     margin: 20px;
 }
 
 .carousel-item {
     padding: 7% 15%;
+}
+
+.otraClase {
+    color: #ef8172;
 }
 
 #press {
@@ -123,10 +126,15 @@ p{
 
 #clases {
     padding: 100px;
+    background-color: #ff4c68;
 }
 
 .card-lista {
     text-align: left;
+}
+
+.titulo-clases {
+    color: white;
 }
 
 .icono-nadar {
